[bugfix] Prevent line from wrapping when opening the menu
* Prevent line (in the items) from wrapping when opening the menu
* Add Introduction.md

--- a/src/style/Menu.scss
+++ b/src/style/Menu.scss
@@ -11,6 +11,7 @@
     position: absolute;
     z-index: 1;
     overflow-x: hidden;
+    white-space: nowrap;
     box-sizing: border-box;
     width: 0;
     height: 100%;
